Fixed gap btwn header and slider for slider-popular (767px) (May 3) #21

--- a/src/Components/Sliders/Popular/SliderPopular.scss
+++ b/src/Components/Sliders/Popular/SliderPopular.scss
@@ -72,4 +72,8 @@
     .slider-popular__col {
         padding: 0px 5px;
     }
+
+    .slider-popular__header {
+        margin-bottom: 10px;
+    }
 }
